tests/out/error/if/cond_no_bool.out
tests/out/error/if/cond_no_bool.in.bt:4:1 error: expected bool, got fun__void
tests/out/error/if/cond_no_bool.in.bt:5:1 error: expected bool, got i32
